# internal/router/guest_routes.go
@@ -3,7 +3,6 @@ package router
 import (
 	"hotel/internal/handler"
 	"hotel/internal/logger"
-	"hotel/internal/model"
 	"hotel/internal/repository"
 	"hotel/internal/service"
 
@@ -11,12 +10,12 @@ import (
 )
 
 func setupGuestRoutes(guestRoutes fiber.Router) {
-	modelGuest := repository.DB.Model(&model.Guest{})
-	guestRepository  := repository.NewGuestRepository(modelGuest)
+	guestRepository  := repository.NewGuestRepository()
 	guestService := service.NewGuestService(guestRepository)
 	guestController := handler.NewGuestController(guestService)
 	guestRoutes.Post("/create", guestController.CreateGuest())
 	guestRoutes.Get("/all", guestController.FindAllGuests())
 	guestRoutes.Put("/update/:id", guestController.UpdateGuest())
+	guestRoutes.Delete("/delete/:id", guestController.DeleteGuest())
 	logger.ZapLogger.Info("guest's routes are running!")
 }
